# IntroweekPuzzle

./: .gitignore  README
Automation puzzle software/: platformio.ini
Automation puzzle software arduino/include/: Automation_driver.h  Pipe.h
Automation puzzle software arduino/src/: Automation_driver.cpp  Pipe.cpp
Automation puzzle software raspberry/: Automation  Automation.cpp  Automation.h  I2C_Controller.cpp  I2C_Controller.h  Makefile  Source.cpp
Automation puzzle software/include/: Automation_driver.h  Automation_settings.h  Pipe.h  ToggleSwitch.h
Automation puzzle software/src/: Automation_driver.cpp  Pipe.cpp  ToggleSwitch.cpp  main.cpp
DBus-POC/: CMakeLists.txt  DBus_POC  client1.py  client3.cpp  dbus_service.py
DBus-POC/cpplib/dbus-cxx-0.11.0/debian/: rules
DBus-POC/cpplib/dbus-cxx-0.11.0/debug/dbus-cxx/: template.macros.m4
DBus-POC/cpplib/dbus-cxx-0.11.0/debug/examples/xml2cpp/calculator/: calculator.xml
DBus-POC/cpplib/dbus-cxx-0.11.0/debug/examples/xml2cpp/hal-proxy/: hal_manager_introspection.xml
DBus-POC/documents/: findings.txt
I2C_bus_controller/: CMakeCache.txt  CMakeLists.txt  I2C_Controller.cpp  I2C_Controller.h  Makefile  Source.cpp  cmake_install.cmake  i2c_controller
I2C_bus_controller/cpplib/dbus-cxx-0.11.0/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  libdbus-cxx.so.1.0 copy.0
I2C_bus_controller/cpplib/dbus-cxx-0.11.0/dbus-cxx/: connection.h
Messagebus/: config.json  messagebus.py  test_client.py  test_client2.py
(+13 files in other folders)
